<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOU</string>
    <string name="action_add_debtor">Add Debtor</string>
    <string name="action_settings">Settings</string>
    <string name="iou">IOU</string>
    <string name="uome">UOme</string>
    <string name="title_activity_add_debtor">AddDebtor</string>
    <string name="tag_name_field">Name field</string>
    <string name="tag_phone_field">Phone field</string>
    <string name="tag_amt_field">Amount field</string>
    <string name="tag_descrip_field">Description field</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">999&#8211;999&#8211;9999</string>
    <string name="currency_dollar">$</string>
    <string name="default_amt_owed">00.00</string>
    <string name="default_debt_description">Description (optional)</string>
    <string name="finish">Finish</string>
    <string name="message_iou">Who do you owe?</string>
    <string name="message_uome">Who owes you?</string>
    <string name="pester">Pester</string>
	<string name="remind">Remind</string>
    <string name="delete">X</string>
    <string name="pester_header_message">Here is the pester message I\'ve generated for you!</string>

    <string-array name="debt_types_array">
        <item>IOU</item>
        <item>UOMe</item>
    </string-array>

    <string name="title_activity_pester_sms">PesterSMSActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
